RESOLVED FIXED39320
FrameLoader: modify urlSelected() to accept a String or KURL instead of ResourceRequest
https://bugs.webkit.org/show_bug.cgi?id=39320
Summary FrameLoader: modify urlSelected() to accept a String or KURL instead of Resou...
Chris Jerdonek
Reported 2010-05-18 14:17:48 PDT
FrameLoader::urlSelected() currently accepts a ResourceRequest for the url. Since ResourceRequest has non-explicit single-parameter constructors for String and KURL, the FrameLoader API isn't as clear as it could be. See also this e-mail: https://lists.webkit.org/pipermail/webkit-dev/2010-May/012880.html Out of the 5 or so urlSelected() call sites (if I remember right), only one of them actually passes a ResourceRequest, and it's done there in an inessential way. So the API is broader than it needs to be. Changing urlSelected() not to accept a ResourceRequest will make the API tighter, more explicit, and easier to refactor.
Attachments
Proposed patch (6.36 KB, patch)
2010-05-19 00:52 PDT, Chris Jerdonek
no flags
Chris Jerdonek
Comment 1 2010-05-19 00:52:06 PDT
Created attachment 56472 [details] Proposed patch
Eric Seidel (no email)
Comment 2 2010-05-20 00:55:38 PDT
Comment on attachment 56472 [details] Proposed patch OK.
Chris Jerdonek
Comment 3 2010-05-20 04:49:01 PDT
Comment on attachment 56472 [details] Proposed patch Clearing flags on attachment: 56472 Committed r59829: <http://trac.webkit.org/changeset/59829>
Chris Jerdonek
Comment 4 2010-05-20 04:49:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.