WebKit/win/WebCoreSupport/WebContextMenuClient.cpp
@@ -140,9 +140,8 @@ void WebContextMenuClient::searchWithGoogle(const Frame* frame)
     url.append(encoded);
     url.append("&ie=UTF-8&oe=UTF-8");
 
-    ResourceRequest request = ResourceRequest(url);
     if (Page* page = frame->page())
-        page->mainFrame()->loader()->urlSelected(request, String(), 0, false, false, true, SendReferrer);
+        page->mainFrame()->loader()->urlSelected(KURL(ParsedURLString, url), String(), 0, false, false, true, SendReferrer);
 }
 
 void WebContextMenuClient::lookUpInDictionary(Frame*)
